# meal-tracker

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: main.yml
migrations/: 001_init.sql  002_rename_url.sql
src/: db.rs  lib.rs  main.rs
tests/: integration_test.rs
