[package]
name = "cooking"
version = "0.1.0"
authors = ["Moritz Kiefer <moritz.kiefer@purelyfunctional.org>"]
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.2"
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "sqlite", "chrono" ] }
async-std = { version = "1.9", features = [ "attributes" ] }
futures = "0.3.12"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
